--- a/4-ml.tex
+++ b/4-ml.tex
@@ -8,15 +8,22 @@
 
 \section{Machine learning}
 
-\subsection{Introduction}
+\subsection{What is machine learning}
 
-\subsection{eXtreme Gradient Boosting}
+\subsection{How to learn accurately}
 
-\section{Ambient-pressure prediction}
+\todo{cross validation, overfitting, hyperparameter optimization}
+
+\subsection{Tree-based models}
+random forest 
+boosting
+eXtreme Gradient Boosting
+
+\section{Prediction of the selectivity}
 
 \subsection{From infinite dilution to ambient pressure}
 
-\subsection{Interpretation of the ML model}
+\section{Interpretation of the ML model}
 
 Origins of the selectivity drop
 
