--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -12,6 +12,39 @@ Experiment? \todo{reprendre la review daglar}
 
 \subsection{Molecular dynamics}
 
+\subsection{Transition state theory}
+
+\todo{what is a transition state for diffusion?}
+
+\todo{how to detect TS}
+
+Fast kinetic Monte Carlo
+tutrast\cite{Mace_2019}
+
+\section{ML modeling}
+
+Results
+
+\section{Transport properties of xenon/krypton separation}
+
+\subsection{Why studying diffusion for xenon krypton}
+
+\todo{kinetic KAXQIL}
+
+\subsection{Correlations}
+
+\section{Fast diffusion calculation algorithm}
+
+\subsection{Implementation in C++}
+
+\subsection{Preliminary results}
+
+\subsection{Visualization tool}
+
+\todo{Take some examples for the vizualisation with comparison to the pore size and diffusion coefficient}
+
+\subsection{ML model training}
+
 \begin{figure}[ht]
   \centering
     \includegraphics[width=6cm]{figures/5-diffusion/diffusion_prediction.pdf}
@@ -35,31 +68,8 @@ Experiment? \todo{reprendre la review daglar}
     \label{fgr:}
 \end{figure}
 
-\subsection{Fast kinetic Monte Carlo}
-tutrast
-ctutrast\cite{Mace_2019}
 ML descriptors
 next steps
-
-\section{ML modeling}
-
-Results
-
-\section{Molecular dynamics calculation results}
-
-\subsection{Why is it relevant?}
-
-\subsection{Correlations}
-
-\section{Fast diffusion calculation algorithm}
-
-\subsection{Implementation in C++}
-
-\subsection{Preliminary results}
-
-\subsection{Visualization tool}
-
-\subsection{ML model training}
 
 \OnlyInSubfile{\printglobalbibliography}
 
