--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -73,9 +73,27 @@ Starting from the initial idea of Voronoi sampling, we want to question the rele
 
 We introduced in the previous chapter, the definition of the xenon adsorption enthalpy at infinite dilution (Widom insertion section 2.1.3) and at ambient pressure (GCMC sections 2.1.2 and 2.1.4). These methods can be considered accurate methods to calculate the adsorption enthalpy which has been prove to be strongly correlated to the logarithm of the selectivity in the our previous study on the thermodynamic exploration of the xenon/krypton separation using a high-throughput screening.
 
+\subsubsection{Introduction of the main concepts}
+
+The Voronoi energy as initially conceptualized by Simon et al.\ is based on the average of the xenon interaction energies at the accessible Voronoi nodes. But because we will compare to thermodynamic simulations without blocking pockets, we will not consider the accessible Voronoi nodes but the adsorbable ones. We define for simplicity, the set of the adsorbable Voronoi nodes $A$ as the Voronoi nodes with a negative energy value. This average on the adsorbable Voronoi nodes $E\e{voro-A}^{Xe}$ can be written:
+
+\begin{equation}
+    E_{voro-A}^{Xe} = \sum_{i \in A} E_i
+\end{equation}
+
+Boltzmann
+
+\begin{equation}
+    E_{voro-A}^{Xe} = \sum_{i \in A} E_i
+\end{equation}
+
+\begin{equation}
+    E_{voro-A}^{Xe} = \sum_{i \in A} E_i
+\end{equation}
+
 \todo{compare the different methodologies: Averaging / Boltzmann}
 
-\subsubsection{Low pressure}
+\subsubsection{Low pressure comparison}
 
 \begin{figure}[ht]
   \centering
