--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -49,7 +49,7 @@ As explained before, we can think of adsorption as a gas--solid or liquid--solid
 \end{equation}
 where $E_c$ and $N_c$ are respectively the energy and the number of adsorbate particles in the configuration $c$. Normally the energy and the number of molecules of all particles should be considered, but for now, since the whole system is considered rigid we will only focus on the adsorbate molecules. The chemical potential $\mu$ and the temperature $T$ inside $\beta$ correspond to the ones of the gas phase in equilibrium with the adsorbent material. And the pressure and volume $V$ are considered fixed under the rigidity assumption. The grand canonical partition function $\Xi(\mu,V,T)$ will then be the following sum over all possible configurations: 
 \begin{equation}
-  \Xi(\mu,V,T) = \sum_c e^{-\beta\left(E_c-\mu N_c\right)} 
+  \Xi(\mu,V,T) = \sum\limits_c e^{-\beta\left(E_c-\mu N_c\right)} 
 \end{equation}
 This multiplicative constant does not need to be known in the Monte Carlo simulation we will describe now. 
 
